--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
-        <h1>Nama Saya</h1>
+    <header class="header">
+        <h1 class="title-nama">Nama Saya</h1>
         <nav>
-            <ul>
-                <li><a href="#about">Tentang Saya</a></li>
-                <li><a href="#skills">Kemampuan</a></li>
-                <li><a href="hobbies">Hobi</a></li>
-                <li><a href="contact">Kontak</a></li>
+            <li><a href="#about">Tentang Saya</a></li>
+            <li><a href="#skills">Kemampuan</a></li>
+            <li><a href="hobbies">Hobi</a></li>
+            <li><a href="contact">Kontak</a></li>
+
             </ul>
         </nav>
     </header>
+    <img src="pemandangan.jpg" alt="daffaalffizhar" width="400" height="300">
+
     <main>
         <section id="about">
-            <h2>Tentang Saya</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscin elit. Aliquam in semper purus, quis convallis elit. Morbi at semper justo. Proin ultricies, mauris in sollicitudin suscipit, felis dui tincidunt leo, sed tempus urna magna id dui.</p>
+            <h2 class="title-tentangsaya">Tentang Saya</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscin elit. Aliquam in semper purus, quis convallis elit.
+                Morbi at semper justo. Proin ultricies, mauris in sollicitudin suscipit, felis dui tincidunt leo, sed
+                tempus urna magna id dui.</p>
         </section>
         <section id="skills">
-            <h2>Kemampuan</h2>
+            <h2 class="title-kemampuan">Kemampuan</h2>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -33,7 +39,7 @@
             </ul>
         </section>
         <section id="hobbies">
-            <h2>Hobi</h2>
+            <h2 class="title-hobi">Hobi</h2>
             <ul>
                 <li>Membaca</li>
                 <li>Olahraga</li>
@@ -51,4 +57,5 @@
         <p>Copyright 2021 | Dibuat dengan HTML dan CSS</p>
     </footer>
 </body>
+
 </html>
